# realtime_cubist_rendering

./: .gitignore  CMakeLists.txt  README.md  optixCubistRender.cpp  sampleConfig.h
cubistutil/: CMakeLists.txt  CMakeLists_.txt  CUDAOutputBuffer.h  Camera.h  Exception.h  Matrix.h  PPMLoader.cpp  PPMLoader.h  Preprocessor.h  Scene.cpp  Scene.h  Trackball.h  cubistutil.cpp  cubistutil.h
cuda/: BufferView.h  GeometryData.h  Light.h  LocalGeometry.h  cubist.h  cubistShading.cu  cubistShading.h  curve.h  helpers.h  sphere.cu  whitted.cu  whitted.h  whitted_cuda.h  whitted_legacy.cu
util/: Aabb.h  CMakeLists.txt  CUDAOutputBuffer.h  Camera.cpp  Camera.h  GLDisplay.cpp  GLDisplay.h  Matrix.h  PPMLoader.cpp  PPMLoader.h  Quaternion.h  Record.h  Scene.cpp  Scene.h  Trackball.cpp  Trackball.h  WorkDistribution.h  cubistutil.h  cubistutilapi.h  sutil.cpp  sutil.h  sutilapi.h  util.cpp  vec_math.h
